# Copyright (c) 2022, salesforce.com, inc.
# All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause
# For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause

load("//tools/heroku_cli:heroku_cli_toolchain.bzl", "heroku_cli_toolchain")

toolchain_type(name = "toolchain_type")

heroku_cli_toolchain(
    name = "heroku_cli_darwin",
    cli = "@heroku_darwin//:heroku/bin/heroku",
)

heroku_cli_toolchain(
    name = "heroku_cli_linux",
    cli = "@heroku_linux//:heroku/bin/heroku",
)

toolchain(
    name = "heroku_cli_darwin_toolchain",
    # we don't care about target_compatible_with
    # because heroku_cli doesn't run on the target platform..
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":heroku_cli_darwin",
    toolchain_type = ":toolchain_type",
)

toolchain(
    name = "heroku_cli_linux_toolchain",
    # we don't care about target_compatible_with
    # because heroku_cli doesn't run on the target platform..
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":heroku_cli_linux",
    toolchain_type = ":toolchain_type",
)
